Criado a página news

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     nesciunt nemo perferendis adipisci harum. Corrupti eum autem veritatis et beatae reiciendis,
                     deleniti corporis, voluptas, eaque ipsa nemo odio? Eligendi sapiente id enim quibusdam, repudiandae
                     optio error! Vitae perspiciatis voluptatem sequi nostrum necessitatibus culpa fuga ...</p>
-                <p><a href="">Ler mais...</a></p>
+                <p><a href="news.html">Ler mais...</a></p>
             </div>
             <div>
                 <h3>Título principal da notícia </h3>
@@ -58,7 +58,7 @@
                     beatae reiciendis, deleniti corporis, voluptas, eaque ipsa nemo odio? Eligendi sapiente id enim
                     quibusdam, repudiandae optio error! Vitae perspiciatis voluptatem sequi nostrum necessitatibus
                     culpa fuga ...</p>
-                <p><a href="">Ler mais...</a></p>
+                <p><a href="news.html">Ler mais...</a></p>
             </div>
             <div>
                 <input type="button" value="Carregar mais">
